exports[`test <TabStack /> re-renders correctly when "replace" action is called 1`] = `
<Text>
  Index
</Text>
`;

exports[`test <TabStack /> re-renders correctly when "replace" action is called 2`] = `
<Text>
  Hello
</Text>
`;

exports[`test <TabStack /> renders correctly 1`] = `
<Text>
  Index
</Text>
`;

exports[`test <TabStack /> renders correctly with initialEntries prop  1`] = `
<Text>
  Hello
</Text>
`;
